--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Azman Arefin</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1><span class="colour">Azman Arefin</span> World</h1>
+            <h3>Biography</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolor, facere dicta vitae odio explicabo quos, atque veritatis impedit accusantium inventore exercitationem, nemo quae molestias cum reprehenderit! Quo, doloremque totam.</p>
+        </div>
+        <div>
+
+        </div>
+    </section>
+    
     
 </body>
 </html>
