--- a/index.html
+++ b/index.html
@@ -28,6 +28,41 @@
             <img src="images/Untitled-1.png">
         </div>
     </section>
+    <section class="second-part">
+        <div class="half-width">
+            <img src="images/Untitled-2.png">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become A Web Developer</h2>
+            <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolor, facere dicta vitae odio
+                explicabo quos, atque veritatis impedit accusantium inventore exercitationem, nemo quae molestias cum
+                reprehenderit! Quo, doloremque totam.</p>
+            <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="last-part">
+        <h1>Experiences</h1>
+        <div class="experince-item">
+            <div id="box-image1" class="experience-area">
+                <h2 class="size">Full Stack Web Developer</h2>
+                <h3 class="rong">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="box-image2" class="experience-area">
+                <h2 class="size">Baby Web Developer</h2>
+                <h3 class="rong">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 
 
 </body>
